# ffdraft

./: .gitignore  FantasyPros_2024_Draft_ALL_Rankings.csv  FantasyPros_2025_Draft_ALL_Rankings.csv  Makefile  example.csv  pyproject.toml  setup.sh
auto-draft-backend/: auto_draft_api.py  draft_strategies.py  requirements.txt
ff-rankings-app/: index.html  package-lock.json  package.json
ff-rankings-app/public/: 4for4 Underdog ADP.csv  BB10s ADP.csv  CBS ADP.csv  ESPN ADP.csv  FFPC ADP.csv  FantasyNow+ PPR.csv  FantasyPros .5 PPR.csv  FantasyPros 2025 Top 10 Accurate Overall PPR.csv  LateRoundDraft.csv  The Fantasy Headliners PPR.csv  Y! ADP.csv  _headers  auto_draft_logic.py  draft_strategies.py
ff-rankings-app/src/: App.jsx
ff-rankings-app/src/components/: AutoDraftSettings.jsx  DraftStats.jsx  DraftTracker.jsx  FileUpload.jsx  KeeperModePanel.jsx  LeagueSettings.jsx  PlayerList.jsx  SearchControls.jsx  SettingsPanel.jsx  TeamBoards.jsx  TeamVisual.jsx  ThemeContext.jsx  UnifiedControlPanel.jsx  UnifiedSettingsPanel.jsx
